--- a/trading_poc.ipynb
+++ b/trading_poc.ipynb
@@ -69,6 +69,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "afd7eed6-618c-4d76-9479-19dc325512ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'kite_login' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m instrument_token \u001b[38;5;241m=\u001b[39m InstrumentToken(setting, logging)\n\u001b[0;32m----> 2\u001b[0m instrument_token\u001b[38;5;241m.\u001b[39mload_instrument_tokens(\u001b[43mkite_login\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'kite_login' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "instrument_token = InstrumentToken(setting, logging)\n",
+    "instrument_token.load_instrument_tokens(kite_login)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "3c263f09-b30f-40d9-9417-1ccb35bce33e",
    "metadata": {},
@@ -85,7 +108,7 @@
    "source": [
     "instrument = Instrument(token, is_index, setting, logging)\n",
     "# instrument.load_historical_data(unique_key)\n",
-    "instrument.load_historical_test_data(unique_key)"
+    "# instrument.load_historical_test_data(unique_key)"
    ]
   },
   {
@@ -897,8 +920,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "91d4147e-4279-4e46-8e53-59c24a079cec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2/4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8abde9fa-ec53-455f-802c-570f6b2b88b2",
    "metadata": {},
    "outputs": [],
    "source": []
